<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.opengl.GLSurfaceView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/have_you_ever_been_to_school"
        android:textSize="52sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/guide_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- A TextureView can be used to display a content stream,
    such as that coming from a camera preview, a video, or an OpenGL scene.
    The content stream can come from the application's process as
    well as a remote process.
    TextureView can only be used in a hardware accelerated window.
    When rendered in software, TextureView will draw nothing.-->
    <!--    <TextureView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calculator_parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_line">

        <TextView
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/c"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/one"
            app:layout_constraintEnd_toStartOf="@+id/two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/reset"
            app:layout_constraintEnd_toStartOf="@+id/divide"
            app:layout_constraintStart_toEndOf="@+id/reset"
            app:layout_constraintTop_toTopOf="@id/reset" />

        <TextView
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/divide"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/reset"
            app:layout_constraintEnd_toStartOf="@id/back"
            app:layout_constraintStart_toEndOf="@+id/zero"
            app:layout_constraintTop_toTopOf="@id/reset" />

        <TextView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/back"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divide"
            app:layout_constraintTop_toTopOf="@id/reset" />


        <TextView
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/four"
            app:layout_constraintEnd_toStartOf="@+id/two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset" />

        <TextView
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_2"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/one"

            app:layout_constraintEnd_toStartOf="@+id/three"
            app:layout_constraintStart_toEndOf="@+id/one"
            app:layout_constraintTop_toTopOf="@id/one" />

        <TextView
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_3"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/two"
            app:layout_constraintEnd_toStartOf="@id/plus"
            app:layout_constraintStart_toEndOf="@+id/two"
            app:layout_constraintTop_toTopOf="@id/one" />

        <TextView
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/plus"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/three"
            app:layout_constraintTop_toTopOf="@id/one" />


        <TextView
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_4"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/seven"
            app:layout_constraintEnd_toStartOf="@+id/two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/one" />

        <TextView
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_5"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/four"
            app:layout_constraintEnd_toStartOf="@+id/six"
            app:layout_constraintStart_toEndOf="@+id/four"
            app:layout_constraintTop_toTopOf="@id/four" />

        <TextView
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_6"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/five"
            app:layout_constraintEnd_toStartOf="@+id/multiply"
            app:layout_constraintStart_toEndOf="@+id/five"
            app:layout_constraintTop_toTopOf="@id/four" />

        <TextView
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/x"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/five"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/six"
            app:layout_constraintTop_toTopOf="@id/four" />

        <TextView
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_7"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/eight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/four" />

        <TextView
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_8"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/seven"
            app:layout_constraintEnd_toStartOf="@+id/nine"
            app:layout_constraintStart_toEndOf="@+id/four"
            app:layout_constraintTop_toTopOf="@id/seven" />

        <TextView
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_9"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/eight"
            app:layout_constraintEnd_toStartOf="@+id/equals"
            app:layout_constraintStart_toEndOf="@+id/eight"
            app:layout_constraintTop_toTopOf="@id/seven" />

        <TextView
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/equals"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/eight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nine"
            app:layout_constraintTop_toTopOf="@id/seven" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>